--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/stdiohakacy/grpc-sum-api/issues"
   },
-  "homepage": "https://github.com/stdiohakacy/grpc-sum-api#readme"
+  "homepage": "https://github.com/stdiohakacy/grpc-sum-api#readme",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.3.7",
+    "google-protobuf": "^3.18.0-rc.2"
+  }
 }
